    arg any more. The URL generator is also available in views as
    ``self.request.url_generator``.
  + Create the SQLAlchemy engine ourself; SQLAHelper no longer does this.
  + Change "[app:{{project}}]" to "[app:myapp]" in INI files so that the name
    is well known and easier to type on the command line (e.g., for 'pshell').
- 'akhet/tests/make_test_app.sh' is a quick-and-dirty script to create and run
  a test application.

Repository Akhet created
------------------------
Repository "Akhet" was cloned from "pyramid_sqla" at this point.
All tags "vVERSION" were renamed to "pyramid_sqla-VERSION". A new tag
"pyramid_sqla-dev" points to the last code change before the split.


pyramid_sqla-dev (never released; changeset c0c74051c201)
---------------------------------------------------------
- ``add_static_route`` is now a Pyramid config method if you call the new
  ``includeme`` function. This is used in the application template.
- Add ``pyramid_sqla`` as a dependency in the application template.
- Delete websetup.py. Console scripts are more flexible than "paster
  setup-app".
- Fix but that may have prevented create_db.py from finding the INI stanza.
- 100% test coverage contributed by Chris McDonough.
- Delete unneeded development code in static.py.
- Set Mako's 'strict_undefined' option in the application template.

pyramid_sqla-1.0rc1  (2010-01-26)
---------------------------------

- 'pyramid_sqla' application template supports commit veto feature in
  repoze.tm2 1.0b1.
- Add production.ini to application template.
- Delete stray files in application template that were accidentally included.

pyramid_sqla-v0.2  (2011-01-19)
-------------------------------

- Pyramid 1.0a10 spins off view handler support to 'pyramid_handlers' package.
- 'pyramid_sqla' application template depends on Pyramid>=1.0a10.


pyramid_sqla-0.1  (2011-01-12)
------------------------------

- Initial release.
- Warning: a change in Pyramid 1.0a10 broke applications created using the