@@ -8,7 +8,9 @@ debug_templates = true
 default_locale_name = en
 mako.directories = {{package}}:templates
 mako.strict_undefined = true
+{{if sqlalchemy}}
 sqlalchemy.url = sqlite:///%(here)s/db.sqlite
+{{endif}}
 session.type = file
 session.data_dir = %(here)s/data/sessions/data
 session.lock_dir = %(here)s/data/sessions/lock
@@ -16,14 +18,9 @@ session.key = {{project}}
 session.secret = {{random_string}}
 
 
-[filter:tm]
-use = egg:repoze.tm2#tm
-commit_veto = repoze.tm:default_commit_veto
-
 [pipeline:main]
 pipeline =
     egg:WebError#evalerror
-    tm
     myapp
 
 [server:main]
@@ -31,10 +28,11 @@ use = egg:Paste#http
 host = 127.0.0.1
 port = 5000
 
+
 # Begin logging configuration
 
 [loggers]
-keys = root, {{package_logger}}, sqlalchemy
+keys = root, {{package_logger}}{{if sqlalchemy}}, sqlalchemy{{endif}}
 
 [handlers]
 keys = console
@@ -51,6 +49,8 @@ level = DEBUG
 handlers =
 qualname = {{package}}
 
+
+{{if sqlalchemy}}
 [logger_sqlalchemy]
 level = INFO
 handlers =
@@ -58,6 +58,7 @@ qualname = sqlalchemy.engine
 # "level = INFO" logs SQL queries.
 # "level = DEBUG" logs SQL queries and results.
 # "level = WARN" logs neither.  (Recommended for production systems.)
+{{endif}}
 
 [handler_console]
 class = StreamHandler
